[gd_scene load_steps=30 format=3 uid="uid://dwvr4cynhhknl"]

[ext_resource type="Texture2D" uid="uid://c6o1k8vo65yro" path="res://Assets/artwork/main_menu/dbright_settings.png" id="2"]
[ext_resource type="Shader" path="res://Assets/artwork/vfx/shaders/swirl_orange.gdshader" id="2_jcawo"]
[ext_resource type="Texture2D" uid="uid://b7vy5ewkv1m2s" path="res://Assets/artwork/main_menu/settings_pressed.png" id="3"]
[ext_resource type="Texture2D" uid="uid://drodrysc61olk" path="res://Assets/artwork/main_menu/title.png" id="4"]
[ext_resource type="Script" path="res://scripts/general_scripts/main_menu.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://bburbf1hthgrl" path="res://Assets/artwork/main_menu/main_button.png" id="7_2lvyi"]
[ext_resource type="Texture2D" uid="uid://dmgr2oxfya3h2" path="res://Assets/artwork/main_menu/main_button_pressed.png" id="8_37fwl"]
[ext_resource type="Shader" path="res://Assets/artwork/vfx/shaders/black_sun.gdshader" id="9_fi4at"]
[ext_resource type="Script" path="res://scripts/general_scripts/settings.gd" id="11"]
[ext_resource type="Texture2D" uid="uid://bsmenn0jmp2gv" path="res://Assets/artwork/main_menu/main_menu_shader.png" id="11_8u8gb"]
[ext_resource type="FontFile" uid="uid://dft0xoqlwfk0m" path="res://Assets/artwork/fonts/MrsSheppards-Regular.ttf" id="11_tl3j1"]
[ext_resource type="Texture2D" uid="uid://cv7wj4wjlba5m" path="res://Assets/artwork/settings/settings_background.png" id="14_62seq"]
[ext_resource type="Texture2D" uid="uid://d04obdifouy3s" path="res://Assets/artwork/settings/regular/music_regular.png" id="15_jkkuo"]
[ext_resource type="Texture2D" uid="uid://84wxgw7so0ek" path="res://Assets/artwork/settings/pressed/music_pressed.png" id="16_nthq0"]
[ext_resource type="Texture2D" uid="uid://di2yagt3funh" path="res://Assets/artwork/settings/regular/exit_regular.png" id="17_s2amr"]
[ext_resource type="Texture2D" uid="uid://sijy83g61clp" path="res://Assets/artwork/settings/pressed/exit_pressed.png" id="18_qjj8e"]
[ext_resource type="Texture2D" uid="uid://b7s07qjjltpps" path="res://Assets/artwork/settings/regular/sound_regular.png" id="19_04inj"]
[ext_resource type="Texture2D" uid="uid://beylo8rrntaga" path="res://Assets/artwork/settings/pressed/sound_pressed.png" id="20_xw8ya"]
[ext_resource type="Texture2D" uid="uid://crmre6drugaph" path="res://Assets/artwork/settings/regular/vibration_regular.png" id="21_ae3kd"]
[ext_resource type="Texture2D" uid="uid://i7poayhloeka" path="res://Assets/artwork/settings/pressed/vibration_pressed.png" id="22_2vbsh"]
[ext_resource type="Texture2D" uid="uid://cvo4ononkl62q" path="res://Assets/artwork/vfx/shaders/shader_materials/full_size_white_text.png" id="33"]

[sub_resource type="ShaderMaterial" id="3"]
resource_local_to_scene = true
shader = ExtResource("2_jcawo")
shader_parameter/water_x = null
shader_parameter/water_y = null
shader_parameter/water_z = null

[sub_resource type="LabelSettings" id="LabelSettings_nrd6p"]
font = ExtResource("11_tl3j1")
font_size = 320

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bim87"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bprau"]
shader = ExtResource("9_fi4at")
shader_parameter/offsetXScale = 0.5
shader_parameter/offsetYScale = 0.5
shader_parameter/rectSize = Vector2(872, 872)
shader_parameter/inputTexture = ExtResource("11_8u8gb")

[sub_resource type="Animation" id="4"]
resource_name = "burn_load"
length = 1.05
loop_mode = 1
step = 0.05

[sub_resource type="Animation" id="Animation_22t6v"]
resource_name = "heart_load"
length = 0.85
loop_mode = 1
step = 0.05

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qenlq"]
_data = {
"burn_load": SubResource("4"),
"heart_load": SubResource("Animation_22t6v")
}

[sub_resource type="LabelSettings" id="LabelSettings_5faah"]
font = ExtResource("11_tl3j1")
font_size = 120

[node name="main_menu" type="Node2D"]
script = ExtResource("5")

[node name="bg" type="Sprite2D" parent="."]
material = SubResource("3")
texture = ExtResource("33")
centered = false

[node name="Label2" type="Label" parent="."]
offset_left = 267.0
offset_top = 505.0
offset_right = 896.0
offset_bottom = 936.0
text = "Spire"
label_settings = SubResource("LabelSettings_nrd6p")

[node name="title" type="TextureRect" parent="."]
visible = false
offset_left = 321.0
offset_top = 560.0
offset_right = 849.0
offset_bottom = 855.0
pivot_offset = Vector2(264, 147)
texture = ExtResource("4")
stretch_mode = 2

[node name="settings_button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(95, 95)
offset_left = 1059.0
offset_top = 2415.0
offset_right = 1154.0
offset_bottom = 2510.0
texture_normal = ExtResource("2")
texture_pressed = ExtResource("3")
stretch_mode = 5

[node name="play_button" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_bim87")
offset_left = 360.0
offset_top = 978.0
offset_right = 1320.0
offset_bottom = 1939.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_2lvyi")
texture_pressed = ExtResource("8_37fwl")

[node name="loading_button" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_bprau")
position = Vector2(576.5, 1196.3)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_8u8gb")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qenlq")
}

[node name="settings" type="Node2D" parent="."]
visible = false
script = ExtResource("11")

[node name="settings_background" type="TextureRect" parent="settings"]
offset_right = 1170.0
offset_bottom = 2532.0
texture = ExtResource("14_62seq")

[node name="music_button" type="TextureButton" parent="settings"]
custom_minimum_size = Vector2(100, 100)
offset_left = 255.0
offset_top = 957.0
offset_right = 375.0
offset_bottom = 1077.0
toggle_mode = true
texture_normal = ExtResource("15_jkkuo")
texture_pressed = ExtResource("16_nthq0")
stretch_mode = 5

[node name="exit_button" type="TextureButton" parent="settings"]
custom_minimum_size = Vector2(100, 100)
offset_left = 50.0
offset_top = 50.0
offset_right = 169.0
offset_bottom = 170.0
texture_normal = ExtResource("17_s2amr")
texture_pressed = ExtResource("18_qjj8e")
stretch_mode = 5

[node name="sound_button" type="TextureButton" parent="settings"]
custom_minimum_size = Vector2(100, 100)
offset_left = 526.0
offset_top = 952.0
offset_right = 646.0
offset_bottom = 1072.0
toggle_mode = true
texture_normal = ExtResource("19_04inj")
texture_pressed = ExtResource("20_xw8ya")
stretch_mode = 5

[node name="vibration_button" type="TextureButton" parent="settings"]
custom_minimum_size = Vector2(100, 100)
offset_left = 798.0
offset_top = 953.0
offset_right = 918.0
offset_bottom = 1073.0
toggle_mode = true
texture_normal = ExtResource("21_ae3kd")
texture_pressed = ExtResource("22_2vbsh")
stretch_mode = 5

[node name="support_button" type="TextureButton" parent="settings"]
custom_minimum_size = Vector2(100, 100)
offset_left = 249.0
offset_top = 1302.0
offset_right = 939.0
offset_bottom = 1418.0
stretch_mode = 5

[node name="Label" type="Label" parent="."]
offset_left = 369.0
offset_top = 1467.0
offset_right = 829.0
offset_bottom = 1632.0
text = "Loading..."
label_settings = SubResource("LabelSettings_5faah")

[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="settings/music_button" to="settings" method="_on_music_button_pressed"]
[connection signal="pressed" from="settings/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="settings/sound_button" to="settings" method="_on_sound_button_pressed"]
[connection signal="pressed" from="settings/vibration_button" to="settings" method="_on_vibration_button_pressed"]
[connection signal="pressed" from="settings/support_button" to="settings" method="_on_support_button_pressed"]
